--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,52 @@
-/* Genel ayarlar */
+/* Genel Stil */
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f7f9;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
+    font-family: Arial, sans-serif;
     box-sizing: border-box;
 }
 
-/* Logo ayarları */
-.logo-wrapper {
-    width: 100%;
+.container {
     text-align: center;
 }
 
 .logo-wrapper img {
-    max-width: 90%;
+    max-width: 100%;
     height: auto;
-    margin: 0;
+    display: block;
+    margin: 0 auto;
 }
 
-/* Form ayarları */
-.form-wrapper {
+.form-wrapper iframe {
     width: 100%;
-    max-width: 640px;
-}
-
-iframe {
-    width: 100%;
-    height: 80vh;
+    max-width: 640px; /* Maksimum genişlik */
+    height: 721px; /* Yükseklik sabit */
     border: none;
-    border-radius: 8px;
-    box-sizing: border-box;
 }
 
-/* Medya sorguları */
+#histats_counter {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    z-index: 1000; /* Üstte görünmesini sağlamak için */
+}
+
+/* Medya Sorguları */
 @media (max-width: 768px) {
-    iframe {
-        height: 60vh; /* Küçük ekranlarda iframe yüksekliğini daha da küçültür */
+    .form-wrapper iframe {
+        height: auto; /* Mobilde yükseklik otomatik ayarlanacak */
+    }
+}
+
+@media (max-width: 480px) {
+    #histats_counter {
+        font-size: 12px; /* Küçük ekranlarda yazı boyutunu küçült */
+        padding: 8px; /* Küçültülmüş padding */
     }
 }
